--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,8 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    roomVersion = '2.2.0-alpha01'
+    archLifecycleVersion = '2.0.0'
+}
